# flashcards-cli

./: my_cards.txt  pdf_content.txt  sample_cards.txt  setup.cfg
.github/workflows/: tests.yml
flashcards_cli/: achievements.py  main.py  model.py  organizers.py  parser.py  study.py
flashcards_cli/edit/: cards.py  decks.py
tests/: conftest.py  test_achievements.py  test_cli.py  test_legacy_edit_isolation.py  test_organizers.py  test_parser.py
