[metadata]
name = flashcards-cli
version = 0.0.1
author = Sara Zanzottera
description = Minimal CLI frontend for flashcards-core
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/ebisu-flashcards/flashcards-cli
project_urls =
    Homepage = https://github.com/ebisu-flashcards/flashcards-cli
    Bug Tracker = https://github.com/ebisu-flashcards/flashcards-cli/issues
    Changelog = https://github.com/ebisu-flashcards/flashcards-cli/releases

keywords = ["flashcards", "srs", "study"]

classifiers =
    Development Status :: 4 - Beta,
    License :: OSI Approved :: AGPLv3 License,
    Programming Language :: Python,
    Programming Language :: Python :: 3,
    Programming Language :: Python :: 3 :: Only,
    Programming Language :: Python :: 3.6,
    Programming Language :: Python :: 3.7,
    Programming Language :: Python :: 3.8,
    Programming Language :: Python :: 3.9,

[options]
python_requires = >=3.6, <4
packages = find:
install_requires =
    click==8.0.1

[options.packages.find]
include =
    flashcards_cli*

[options.extras_require]
dev = 
    pytest>=8.0

[options.entry_points]
console_scripts =
    flashcard = flashcards_cli:main
    flashcards = flashcards_cli:main

[flake8]
max-line-length = 99
exclude = .git, __pycache__
max-complexity = 10
select=C,E,F,W
ignore=W503,W504

[tool:pytest]
log_cli = 1
log_cli_level = DEBUG
